fixed issue with forum-home page disappearing on small screens

--- a/src/app/forum-home/forum.component.css
+++ b/src/app/forum-home/forum.component.css
@@ -1,15 +1,3 @@
-@media screen and (min-width: 960px) {
-  .search-wrapper {
-    width: 500px;
-  }
-}
-
-@media screen and (max-width: 960px) {
-  .search-wrapper {
-    margin: 12px 24px 12px 12px;
-    width: 100%;
-  }
-}
 
 md-input-container {
   width: 100%;
@@ -25,3 +13,7 @@ md-input-container {
   border: none
 }
 
+md-tab-group,
+ask-question {
+  flex: 1 !important;
+}
